initial commit for Fall 2021
Initial commit for Fall 2021

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: VPN X-Ray HDSI Capstone Project
+title: Network Performance Classification HDSI Capstone Project
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
